tests/frontend/fail/array/out_of_bounds_nestedIdxs.act
contract B

constructor
interface constructor()

creates

  int[3] a := [0,0,0]


transition f
interface f()


storage

  a[1] := a[a[2]]
